{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 16,
  "lineage": "3453a285-5ac7-eb92-f083-b3fa231a964c",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:270597536978:internet-gateway/igw-0811fdfb01f03c519",
            "id": "igw-0811fdfb01f03c519",
            "owner_id": "270597536978",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08da3986c17a972e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0811fdfb01f03c519",
            "id": "r-rtb-06c99ae60888492811080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06c99ae6088849281",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01336dfb930264e03",
            "owner_id": "270597536978",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-private-eu-central-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08da3986c17a972e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-006512d1fe49ae7ab",
            "owner_id": "270597536978",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-private-eu-central-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08da3986c17a972e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06c99ae6088849281",
            "owner_id": "270597536978",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08da3986c17a972e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ae52477012dab5b",
            "route_table_id": "rtb-01336dfb930264e03",
            "subnet_id": "subnet-03f00c6ce7aff824c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aaa1b79cb9e53b25",
            "route_table_id": "rtb-006512d1fe49ae7ab",
            "subnet_id": "subnet-0f5850f66e1ad9b44"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f654ca638a3091f7",
            "route_table_id": "rtb-06c99ae6088849281",
            "subnet_id": "subnet-033ce7d6ca7822f0d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eea6bffd42e2e17a",
            "route_table_id": "rtb-06c99ae6088849281",
            "subnet_id": "subnet-03fef35383cb38602"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:270597536978:subnet/subnet-03f00c6ce7aff824c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.2.1.0/24",
            "id": "subnet-03f00c6ce7aff824c",
            "map_public_ip_on_launch": false,
            "owner_id": "270597536978",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-private-eu-central-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08da3986c17a972e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:270597536978:subnet/subnet-0f5850f66e1ad9b44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.2.2.0/24",
            "id": "subnet-0f5850f66e1ad9b44",
            "map_public_ip_on_launch": false,
            "owner_id": "270597536978",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-private-eu-central-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08da3986c17a972e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:270597536978:subnet/subnet-033ce7d6ca7822f0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.2.101.0/24",
            "id": "subnet-033ce7d6ca7822f0d",
            "map_public_ip_on_launch": true,
            "owner_id": "270597536978",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-public-eu-central-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08da3986c17a972e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:270597536978:subnet/subnet-03fef35383cb38602",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.2.102.0/24",
            "id": "subnet-03fef35383cb38602",
            "map_public_ip_on_launch": true,
            "owner_id": "270597536978",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc-public-eu-central-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-08da3986c17a972e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:270597536978:vpc/vpc-08da3986c17a972e8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0e35bd53ea9a4db9b",
            "default_route_table_id": "rtb-0cbe20b120267044e",
            "default_security_group_id": "sg-01fc0ce3c7ec6830d",
            "dhcp_options_id": "dopt-ae01a8c4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08da3986c17a972e8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cbe20b120267044e",
            "owner_id": "270597536978",
            "tags": {
              "Environment": "prod",
              "Name": "prod-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}